syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Analogy.LogServer";

package greet;

// The greeting service definition.
service Analogy {
	// Sends a greeting
	rpc SubscribeForSendMessages (stream AnalogyLogMessage) returns (AnalogyMessageReply);
	rpc SubscribeForConsumeMessages (AnalogyConsumerMessage) returns (stream AnalogyLogMessage);
}

// The request message containing the user's name.
message AnalogyLogMessage {
	string Id = 1;
	google.protobuf.Timestamp Date = 2;
	string Text =3;
	string Category =4;
	string Source =5;
	string MethodName =6;
	string FileName =7;
	int32 LineNumber =8;
	string Class=9;
	string MachineName=10;
	string Level=11;
	string Module =12;
	int32 ProcessId =13;
	int32 ThreadId =14;
	string User =15;
	map<string,string> AdditionalInformation=16;
}

// The response message containing the greetings.
message AnalogyMessageReply {
	string message = 1;
}
message AnalogyConsumerMessage {
	string message = 1;
}